--- a/Pages/bio.html
+++ b/Pages/bio.html
@@ -22,6 +22,6 @@
                 </p>
             </div>
         </div>
-        <script src="/Scripts/inserter.js"></script>
+        <script src="/Scripts/inserter.js" type="module"></script>
     </body>
 </html>
